# NPorter

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md  get.sh  install.sh
.github/workflows/: ci.yml
data/config/: nporter.toml
scripts/: build-release.sh  linux-check.sh  nft-container-test.sh
src/: cli.rs  config.rs  daemon.rs  main.rs  metrics.rs  model.rs  probe.rs  ufw.rs
src/nft/: backend.rs  mod.rs  ruleset.rs
src/tui/: app.rs  mod.rs  theme.rs  ui.rs
systemd/: nporter.service
